[package]
name = "helloRust"
version = "0.1.0"
authors = ["jasonlin <infwonder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.35"
serde_with = { version = "1.6.4", features = [ "json" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
isahc = "1.1.0"